.metadata/.plugins/org.eclipse.cdt.ui/servo.build.log
15:51:40 **** Incremental Build of configuration Debug for project servo ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:165:13: error: invalid storage class for function 'MX_TIM1_Init'
  165 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:240:13: error: invalid storage class for function 'MX_GPIO_Init'
  240 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:270:1: error: expected declaration or statement at end of input
  270 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:51:13: warning: 'MX_GPIO_Init' used but never defined
   51 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:52:13: warning: 'MX_TIM1_Init' used but never defined
   52 | static void MX_TIM1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:261:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  261 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:240:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  240 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:165:13: warning: 'MX_TIM1_Init' defined but not used [-Wunused-function]
  165 | static void MX_TIM1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:125:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  125 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:51:41 Build Failed. 4 errors, 6 warnings. (took 441ms)

